tour de l'adversaire fonctionnel (setter encore à faire)